--- a/src/main/resources/templates/add_student.html
+++ b/src/main/resources/templates/add_student.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Student List</title>
+    <title>Add Student</title>
 </head>
 <body>
 
